; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_extra_field.c__zip_ef_new.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_extra_field.c__zip_ef_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip_extra_field = type { i32, i32, i32*, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.zip_extra_field* @_zip_ef_new(i32 %0, i32 %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.zip_extra_field*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.zip_extra_field*, align 8
  %11 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = call i32* @malloc(i32 32)
  %13 = bitcast i32* %12 to %struct.zip_extra_field*
  store %struct.zip_extra_field* %13, %struct.zip_extra_field** %10, align 8
  %14 = icmp eq %struct.zip_extra_field* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %4
  store %struct.zip_extra_field* null, %struct.zip_extra_field** %5, align 8
  br label %51

16:                                               ; preds = %4
  %17 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  %18 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %17, i32 0, i32 4
  store i32* null, i32** %18, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  %21 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %20, i32 0, i32 3
  store i32 %19, i32* %21, align 8
  %22 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  %23 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %22, i32 0, i32 2
  store i32* null, i32** %23, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  %26 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 8
  %27 = load i32, i32* %7, align 4
  %28 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  %29 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %28, i32 0, i32 1
  store i32 %27, i32* %29, align 4
  %30 = load i32, i32* %7, align 4
  %31 = icmp sgt i32 %30, 0
  br i1 %31, label %32, label %49

32:                                               ; preds = %16
  %33 = load i32, i32* %7, align 4
  %34 = call i32* @malloc(i32 %33)
  store i32* %34, i32** %11, align 8
  %35 = load i32*, i32** %11, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %45

37:                                               ; preds = %32
  %38 = load i32*, i32** %11, align 8
  %39 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  %40 = getelementptr inbounds %struct.zip_extra_field, %struct.zip_extra_field* %39, i32 0, i32 2
  store i32* %38, i32** %40, align 8
  %41 = load i32*, i32** %11, align 8
  %42 = load i32*, i32** %8, align 8
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @memcpy(i32* %41, i32* %42, i32 %43)
  br label %48

45:                                               ; preds = %32
  %46 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  %47 = call i32 @free(%struct.zip_extra_field* %46)
  store %struct.zip_extra_field* null, %struct.zip_extra_field** %5, align 8
  br label %51

48:                                               ; preds = %37
  br label %49

49:                                               ; preds = %48, %16
  %50 = load %struct.zip_extra_field*, %struct.zip_extra_field** %10, align 8
  store %struct.zip_extra_field* %50, %struct.zip_extra_field** %5, align 8
  br label %51

51:                                               ; preds = %49, %45, %15
  %52 = load %struct.zip_extra_field*, %struct.zip_extra_field** %5, align 8
  ret %struct.zip_extra_field* %52
}

declare dso_local i32* @malloc(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @free(%struct.zip_extra_field*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
